--- a/Frontend/src/components/newActivity.module.css
+++ b/Frontend/src/components/newActivity.module.css
@@ -1,18 +1,18 @@
 .moduleContainer {
   max-width: 80%;
+  max-height: 75vh;
   background: whitesmoke;
   border: 1px solid #ccc;
-  margin-top: 150px;
   border-radius: 5px;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  top: 0vh;
+  position: absolute;
   z-index: 5;
   padding: 20px;
   box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.7);
   -webkit-box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.7);
   -moz-box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.7);
+  overflow: auto;
 }
 
 .formContainer{
@@ -62,6 +62,7 @@ select {
   height: 25px;
   border-radius: 5px;
   margin-bottom: 20px;
+  max-width: 90%;
 }
 
 .buttonContainer {
